<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupActivity"
    android:background="@drawable/blogpostlogin">




    <LinearLayout
        android:layout_width="372dp"
        android:layout_height="349dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"


        android:background="@drawable/myback"
        android:elevation="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="30dp"
            android:theme="@style/EditTextHint"


            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_post_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#ffffff"
                android:hint="@string/text_name15"
                android:inputType="text"
                android:maxLength="120"
                android:textColor="#ffffff" />
        </com.google.android.material.textfield.TextInputLayout>


        <ProgressBar
            android:id="@+id/new_post_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="11dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="370dp"
        android:layout_height="272dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="60dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237">


        <ImageView
            android:id="@+id/new_post_image"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="-20dp"
            android:layout_marginBottom="-20dp"
            android:layout_weight="1"

            android:contentDescription="@string/app_name"
            android:src="@drawable/picture" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:gravity="center|top"
            android:text="@string/text_name20"
            android:textColor="#ff0000" />

    </LinearLayout>

    <Button
        android:id="@+id/new_post_btn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        android:layout_marginBottom="128dp"
        android:background="@drawable/btnback1"
        android:text="@string/text_name41"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>